kubernetes/prod/app-prod-deployment-flask.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-prod-deployment-flask
  labels:
    app: app-prod-deployment-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-prod-deployment-flask
  template:
    metadata:
      labels:
        app: app-prod-deployment-flask
    spec:
      containers:
        - name: app-prod-deployment-flask
          imagePullPolicy: Always
          image: hsosbee/tvs_api
          ports:
          - name: http
            containerPort: 5000
