kubernetes/prod/app-prod-service-flask.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-prod-service-flask
spec:
  type: ClusterIP
  selector:
    app: app-prod-deployment-flask
  ports:
  - name: http
    port: 5000
    targetPort: 5000
