kubernetes/prod/app-prod-service-nodeport-flask.yml
---
kind: Service
apiVersion: v1
metadata:
    name: app-prod-service-nodeport-flask
spec:
    type: NodePort
    selector:
        app: app-prod-deployment-flask
    ports:
        - port: 5000
          targetPort: 5000
