kubernetes/prod/app-prod-ingress-flask.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-prod-flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "hsosbee-flask.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app-prod-flask-ingress
              port:
                  number: 5000
